# b32k

./: .gitignore  CORI_HAT_CONTINUITY.md  README.md  b32k.delta.jsonl  canon_hashes.py  codec.py  pyproject.toml
notes/: aletheos_accountable_stewardship_g6_001.md  aletheos_canonical_profile_001.md  aletheos_cli_001.md  aletheos_cli_admit_001.md  aletheos_cli_bind_001.md  aletheos_cli_mark_001.md  aletheos_cli_receipt_001.md  aletheos_cli_return_001.md  aletheos_cli_revoke_001.md  aletheos_cli_route_checkpoint_001.md  aletheos_cli_verify_001.md  aletheos_declared_submission_g7_001.md  aletheos_deterministic_body_hello_world_001.md  aletheos_execution_state_model_001.md  aletheos_g7_deterministic_submission_revision_001.md  aletheos_ganglion_ladder_checkpoint_001.md  aletheos_ganglion_registry_001.md  aletheos_ganglion_sequence_g1_g3_001.md  aletheos_instruction_grammar_001.md  aletheos_llm_viewer_contract_boundary_001.md  aletheos_memorized_token_registry_001.md  aletheos_minimal_apparatus_001.md  aletheos_minimal_witness_packet_001.md  aletheos_negative_witness_packet_001.md  aletheos_operator_profile_001.md  aletheos_operator_registry_001.md  aletheos_origin_myth_fragment_001.md  aletheos_phase_registry_and_g4_001.md  aletheos_pre_ratification_checkpoint_001.md  aletheos_ratification_checklist_001.md  aletheos_refusal_of_dominion_g5_001.md  b32k_aletheos_canonical_index_001.md  contract_draft_003_status.md  genesis_boundary_grammar_draft_001.md  kjv_genesis_1_b32k_binding_001.md  kjv_genesis_1_day6_expansion_001.md  kjv_genesis_1_structural_concordance_001.md  (+5 more)
(+96 files in other folders)
