[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "b32k"
version = "0.5.1"
description = "Canonical Base32768 (B32K) lattice + codec"
requires-python = ">=3.10"

[project.scripts]
b32k = "b32k.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
[tool.setuptools.package-data]
b32k = ["*.json", "*.jsonl", "*.pdf"]
